--- a/travel_recmmendation.css
+++ b/travel_recmmendation.css
@@ -1,7 +1,12 @@
 body {
   padding: 0;
   margin: 0;
-  background-image: url("./public/bg2.jpg");
+  background-image: linear-gradient(
+      to right,
+      rgb(57, 72, 73),
+      rgba(255, 255, 255, 0)
+    ),
+    url("./public/bg2.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
@@ -9,9 +14,8 @@ body {
 }
 
 header {
-position: fixed;
-  background-color: black;
-  background: linear-gradient(to right, rgb(1, 0, 0), rgba(255,0,0,0));
+  position: fixed;
+  background: linear-gradient(to right, rgb(3, 41, 44), rgba(255, 0, 0, 0));
   width: 100%;
   opacity: 0.99;
 }
@@ -26,10 +30,10 @@ position: fixed;
 .logo-section {
   display: flex;
   justify-content: space-between;
-  /* background-color: bisque; */
   align-items: center;
   font-weight: bolder;
   font-style: italic;
+  font-size: 18px;
 }
 
 .logo-section img {
@@ -40,22 +44,79 @@ position: fixed;
 
 .navbar-container .links a {
   padding: 10px;
-  text-decoration : none;
+  text-decoration: none;
   color: inherit;
   font-weight: bold;
   font-size: 14px;
 }
 
-.searchbar {
+.searchbar-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  align-items: center;
   background-color: #fff;
-  padding: 10px;
-  opacity: 0.8;
-  border-radius: 20px;
+  padding: 10px 25px;
+  opacity: 0.5;
+  border-radius: 30px;
+}
+#searchbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 15px;
+}
+.searchbar-container input {
+  border-style: none;
+  margin-right: 40px;
+  height: 25px;
+  font-size: 14px;
+}
+
+.searchbar-container img {
+  width: 25px;
+}
+
+.searchbar-container button {
+  margin: 0px 5px;
+  width: 80px;
+  height: 30px;
+  border-radius: 5px;
+  border-style: none;
+  background-color: #156b60;
+  color: #fff;
+  font-size: 14px;
 }
 
 .main-container {
-  /* display: flex;
-justify-content: center; */
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+}
+
+.main-container .main-inner-container {
+  margin-top: 200px;
+  margin-left: 180px;
+}
+
+.main-container #h-tag {
+  font-weight: bold;
+  font-size: 70px;
+  width: 300px;
+}
+
+.main-container p {
+  width: 350px;
+  font-size: 20px;
+}
+
+.main-container button {
+  margin-top: 15px;
+  font-size: 20px;
+  width: 180px;
+  height: 50px;
+  background-color: #156b60;
+  border-style: none;
+  opacity: 0.7;
+  color: #fff;
+  cursor: pointer;
 }
