--- a/travel_recmmendation.css
+++ b/travel_recmmendation.css
@@ -13,8 +13,9 @@ body {
   background-size: cover;
 }
 
-button{
+button {
   cursor: pointer;
+  background-color: #156b60;
 }
 
 header {
@@ -87,7 +88,6 @@ header {
   height: 30px;
   border-radius: 5px;
   border-style: none;
-  background-color: #156b60;
   color: #fff;
   font-size: 14px;
 }
@@ -96,6 +96,7 @@ header {
   display: flex;
   flex-direction: column;
   color: #fff;
+  position: relative;
 }
 
 .main-container .main-inner-container {
@@ -119,9 +120,43 @@ header {
   font-size: 20px;
   width: 180px;
   height: 50px;
-  background-color: #156b60;
   border-style: none;
   opacity: 0.7;
   color: #fff;
   cursor: pointer;
+}
+
+.main-container .left-container{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 100px;
+  margin-left: 50px;
+}
+
+.main-container #h-line {
+  
+  background-color: #fff;
+  height: 240px;
+  width: 2px;
+  border-radius: 20px;
+  opacity: 0.7;
+}
+.main-container .social-icons {
+  /* position: absolute; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 240px;
+  width: 60px;
+  background-color: #fdfdfd;
+  margin-top: 100px;
+  opacity: 0.1;
+}
+
+.social-icons img{
+  width:40px;
+  height:30px;
 }
