--- a/travel_recmmendation.css
+++ b/travel_recmmendation.css
@@ -161,6 +161,45 @@ header {
   cursor: pointer;
 }
 
+#list-container {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: rgba(0, 0, 0, 0);
+  margin-left: 70%;
+  margin-top: 90px;
+  width: 540px;
+  padding: 10px;
+  color: #09373a;
+}
+.card-container{
+  background-color:#ffffff ;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  overflow: hidden;
+  margin-top: 10px;
+  border-radius: 20px;
+  height: 100%;
+}
+.card-img img{
+  width: 100%;
+  max-height: 400px;
+}
+
+.card-disc {
+  padding: 10px 20px;
+}
+.card-disc p{
+  width: 100%;
+  word-wrap:break-word;
+}
+#cardBtn{
+  width: auto;
+  padding: 10px 25px;
+  border-radius: 5px;
+}
 .main-container .main-inner-container-about {
   margin-top: 100px;
   margin-left: 180px;
